--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,4 +8,11 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
+    == render 'shared/navbar'
+    - if notice
+      p.alert.alert-info
+        = notice
+    - if alert
+      p.alert.alert-danger
+        = alert
     = yield
