--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -11,6 +11,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         = link_to 'Articles', :articles, class: 'nav-link'
       li.nav-item
         = link_to 'My Articles', :my_articles, class: 'nav-link'
+    = form_tag(articles_path, method: :get, class: 'form-inline my-2 my-lg-0') do
+      = text_field_tag :term, params[:term], class: 'form-control mr-sm-2'
+      = submit_tag 'Search', name: nil, class: 'btn btn-outline-success my-2 my-sm-0'
     - if user_signed_in?
       = link_to 'SignOut', :destroy_user_session, method: :delete, class: 'nav-link'
     - else
