--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,13 +1,20 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand[href="#"]
+  a.navbar-brand[href="/"]
     | Fiki
   button.navbar-toggler[type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"]
     span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
     ul.navbar-nav.mr-auto
-      li.nav-item.active
-        = link_to 'Home', :root
+      li.nav-item
+        = link_to 'Home', :root, class: 'nav-link'
+      li.nav-item
+        = link_to 'Articles', :articles, class: 'nav-link'
+      li.nav-item
+        = link_to 'My Articles', :my_articles, class: 'nav-link'
+    = form_tag(articles_path, method: :get, class: 'form-inline my-2 my-lg-0') do
+      = text_field_tag :term, params[:term], class: 'form-control mr-sm-2'
+      = submit_tag 'Search', name: nil, class: 'btn btn-outline-success my-2 my-sm-0'
     - if user_signed_in?
-      = link_to 'SignOut', :destroy_user_session, method: :delete
+      = link_to 'SignOut', :destroy_user_session, method: :delete, class: 'nav-link'
     - else
-      = link_to 'SignIn', :new_user_session
+      = link_to 'SignIn', :new_user_session, class: 'nav-link'
